# scrub

./: AGENTS.md  AI_OUTPUT_REINSERT_WORKFLOW_REVIEW.md  CHANGELOG.md  CLEAN_DOCX_EXPORT_POLICY.md  CONTEXT_CARD_UI_PLAN.md  DECISION_LOG.md  DESKTOP_PACKAGING_DECISION.md  DOCUMENT_CENTRIC_REVIEW_UX_SPEC.md  DOCX_HIDDEN_CONTENT_EXTRACTION_HELPER.md  DOCX_HIDDEN_CONTENT_RISK_REVIEW.md  DOCX_HYGIENE_AUDIT_REPORT.md  DOCX_HYGIENE_AUDIT_UI_PLAN.md  DOCX_RESIDUAL_PLACEHOLDER_COMMENTS_TRIAGE.md  Dockerfile  EXPORT_DOWNLOAD_UX_CONTRACTS.md  EXPORT_DOWNLOAD_UX_IMPLEMENTATION.md  FRONTEND_ARCHITECTURE_DECISION.md  HIGHLIGHT_BASED_REVIEW_PROTOTYPE_DECISION.md  ICP_AND_PRICING_HYPOTHESIS.md  LOCAL_RUN.md  LOCAL_RUNTIME_ARCHITECTURE_PLAN.md  MVP_PRODUCT_QUALITY_GATE.md  MVP_UI_APP_VERIFICATION_CLOSEOUT.md  MVP_UI_CLEANUP_AND_EXPORT_REDESIGN_PLAN.md  PARALLEL_SPEC_CONSOLIDATION_WP58.md  PDF_TEXT_EXTRACTION_RELIABILITY_REVIEW.md  PDF_TEXT_REINSERT_UI_PLAN.md  PERSON_NAME_RECOGNIZER_CONTRACT_TESTS.md  PLACEHOLDER_FORMAT_PROPOSAL.md  PLACEHOLDER_ROBUSTNESS_REVIEW.md  PROJECT_PROMPT.md  PROJECT_PROMPT_SHORT.md  RECALL_BENCHMARK_REPORT_ARTIFACT.md  RECALL_BENCHMARK_REPORT_ARTIFACT_FIX.md  RECALL_BENCHMARK_REPORT_REVIEW.md  RECALL_BENCHMARK_REPORT_REVIEW_2.md  RECALL_BENCHMARK_RUNNER_MINIMAL.md  RECALL_BENCHMARK_SPEC.md  RECALL_BENCHMARK_THRESHOLDS_PLAN.md  RECALL_PERSON_NAME_COVERAGE_REVIEW.md  (+92 more)
.streamlit/: config.toml
benchmark/: build_entity_scorecard.py  build_residual_risk_report.py  run_recall_precision.py
corpus/: README.md
prototypes/: side_by_side_sync_scroll_prototype.html
(+455 files in other folders)
