[tool.poetry]
name = "presidio-streamlit"
version = "0.1.0"
description = ""
authors = ["Presidio"]
readme = "index.md"

[tool.poetry.dependencies]
python = "^3.10"
presidio-analyzer = {extras = ["transformers"], version = "^2.2.355"}
spacy-stanza = "^1.0.4"
presidio-anonymizer = "^2.2.355"
streamlit = "^1.39.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
st-annotated-text = "^4.0.1"
flair = "^0.14.0"
openai = "^1.53.0"
azure-ai-textanalytics = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
